Fix(all): alignement étoiles

--- a/style_reservia.css
+++ b/style_reservia.css
@@ -252,9 +252,7 @@ header {
   margin-bottom: 5px;
 }
 
-.fas {
-  margin-left: -5px;
-}
+
 /* Couleur de l'icon */
 .blue_icon {
   color:#0065fc;
